# trading-cards-2026

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  watcher.py
input/: staff-test-full.csv  staff-test-one-each.csv  staff-test-one-long.csv  staff-test-one.csv
src/trading_cards/: __init__.py  app.py  main.py
src/trading_cards/builder/: __init__.py  image.py  shape.py  text.py
src/trading_cards/card/: __init__.py  card_back_generator.py  card_front_generator.py  card_generator.py
src/trading_cards/entities/: staff_member.py
src/trading_cards/utils/: __init__.py  constants.py  error.py  helpers.py  logger.py  types.py
src/trading_cards/worker/: csv_reader.py  exporter.py
tests/: test_main.py
typings/watchdog/: events.pyi
